# cavoke

./: .clang-format  .craft.ini  .craft.shelf  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  AuthFilter_8cc_source.html  AuthFilter_8h_source.html  AuthenticationManager_8cpp_source.html  AuthenticationManager_8h_source.html  CMakeLists.txt  CavokeClient.html  CavokeServer.html  ClientServerProtocol.html  Components.html  ComponentsDetailed.html  Doxyfile  Doxyfile.in  GameLogicProtocol.html  GameLogicProtocol.md  LICENSE  OverviewPage.html  QMLComponentProtocol.html  README.md  _1_Introduction.html  _1_Introduction.js  _3_DeepDive.html  _3_DeepDive.js  _config.yml  annotated.html  annotated_dup.js  authdialog_8cpp_source.html  authdialog_8h_source.html  cache__manager_8cpp_source.html  cache__manager_8h_source.html  cavoke-dev-lib_2cavoke_8cpp_source.html  cavoke-dev-lib_2cavoke_8h_source.html  cavoke-dev-server-lib_2cavoke_8cpp_source.html  cavoke-dev-server-lib_2cavoke_8h_source.html  (+468 more)
.circleci/: config.yml  server-test-health.py  suse-qt6-install-karchive.sh
.devcontainer/: Dockerfile  devcontainer.json
cavoke-dev-server-lib/: CMakeLists.txt  cavoke.cpp  utils.h
cavoke-dev-server-lib/controllers/: logic_controller.cpp  logic_controller.h
cavoke-game-container-server/: CMakeLists.txt  main.cpp
client/: AuthenticationManager.cpp  AuthenticationManager.h  CMakeLists.txt  Packaging.cmake  README.md  cache_manager.cpp  cache_manager.h  cavoke.desktop  cavokeclientmodel.h  cavokeclientview.cpp  cavokeclientview.h  cavokeclientview.ui  cavokeqmlgamemodel.cpp  cavokeqmlgamemodel.h  client.pro  gameinfo.cpp  gameinfo.h  main.cpp  network_manager.cpp  network_manager.h  resource.qrc  sessioninfo.cpp  sessioninfo.h  tictactoelogic.h  validationresult.cpp
client/controllers/: cavokeclientcontroller.cpp  cavokeclientcontroller.h  startcontroller.cpp  startcontroller.h
client/entities/: gameinfo.cpp  gameinfo.h  gamestatistics.cpp  gamestatistics.h  player.cpp  player.h  role.cpp  role.h  roominfo.cpp  roominfo.h  sessioninfo.cpp  sessioninfo.h  user.cpp  user.h  usergamestatistics.cpp  usergamestatistics.h  userstatistics.cpp  userstatistics.h  validationresult.cpp  validationresult.h
client/models/: cavokeclientmodel.cpp  cavokeclientmodel.h  cavokeqmlgamemodel.cpp  cavokeqmlgamemodel.h  startmodel.cpp  startmodel.h
client/resources/: resources.qrc
client/tictactoe-files/: tic-tac-toe.qml
client/tictactoe-files/content/: TicTac.qml  interactions.js
client/views/: authdialog.cpp  authdialog.h  authdialog.ui  cavokeclientview.cpp  cavokeclientview.h  cavokeclientview.ui  creategameview.cpp  creategameview.h  creategameview.ui  gameslistview.cpp  gameslistview.h  gameslistview.ui  joingameview.cpp  joingameview.h  joingameview.ui  loginbox.cpp  loginbox.h  loginbox.ui  middlescreenview.cpp  middlescreenview.h  middlescreenview.ui  protoroomview.cpp  protoroomview.h  protoroomview.ui  roomview.cpp  roomview.h  roomview.ui  sessionview.cpp  sessionview.h  sessionview.ui  settingsview.cpp  settingsview.h  settingsview.ui  startview.cpp  startview.h  startview.ui  statisticsview.cpp  statisticsview.h  statisticsview.ui  testwindowview.cpp  (+2 more)
cmake/: DoxygenConfig.cmake  (+1 more)
games/: CMakeLists.txt  cavoke.cpp  cavoke.h
games/codenames/: config.json
games/codenames/client/: build.sh
games/codenames/client/codenames-client/: CMakeLists.txt  app.qml  app_qt_creator.qml  main.cpp  qml.qrc
games/codenames/client/codenames-client/src/components/: Card.qml
games/codenames/client/codenames-client/src/interactions/: interactions.js
games/codenames/client/codenames-client/src/screens/: Game.qml
games/codenames/client/codenames-client/src/style/: colors.js
games/codenames/server/assets/wordlists/: ru.txt
games/codenames/server/src/: codenames.cpp  model.cpp  model.h  wordlists.cpp  wordlists.h
games/tictactoe/: tictactoe.cpp
server/: CMakeLists.txt  Dockerfile  README.md  build.sh  cavoke_base_exception.cpp  cavoke_base_exception.h  config.json  creation.sql  example_config.json  install.sh  main.cpp  utils.h
server/.gcp/: Dockerfile  gcr.Dockerfile  gcsfuse_run.sh
server/controllers/: games_controller.cpp  games_controller.h  gamesubmissions_controller.cpp  gamesubmissions_controller.h  health_controller.cpp  health_controller.h  rooms_controller.cpp  rooms_controller.h  sessions_controller.cpp  sessions_controller.h  state_controller.cpp  state_controller.h  statistics_controller.cpp  statistics_controller.h  users_controller.cpp  users_controller.h
server/db/: schema.sql
server/filters/: AuthFilter.cc  AuthFilter.h
server/model/: GamesStorageConfig.cpp  GamesStorageConfig.h  game.cpp  game.h  game_logic_manager.cpp  game_logic_manager.h  game_state_storage.cpp  game_state_storage.h  games_storage.cpp  games_storage.h  games_storage_config.cpp  games_storage_config.h  participation_storage.cpp  participation_storage.h
server/model/auth/: authentication_manager.cpp  authentication_manager.h
server/model/games/: game.h  games_storage.cpp  games_storage.h  games_storage_config.cpp  games_storage_config.h
server/model/logic/: game_logic_manager.cpp  game_logic_manager.h  game_state_storage.cpp  game_state_storage.h
server/model/mock_tictactoe/: tictactoe.cpp  tictactoe.h
server/model/rooms/: rooms_storage.cpp  rooms_storage.h
server/model/sessions/: game_session.cpp  game_session.h  sessions_storage.cpp  sessions_storage.h
server/model/statistics/: statistics_manager.cpp  statistics_manager.h
server/models/: Globalstates.cc  Globalstates.h  Players.cc  Players.h  Playerstates.cc  Playerstates.h  Sessions.cc  Sessions.h  Users.cc  Users.h  model.json
server/pytest/: conftest.py  pytest.ini  test-requirements.txt  test_health.py  test_tictactoe.py
server/sql-models/: Gamesubmissions.cc  Gamesubmissions.h  Globalstates.cc  Globalstates.h  Players.cc  Players.h  RoomJoins.cc  RoomJoins.h  Rooms.cc  Rooms.h  Sessions.cc  Sessions.h  Statuses.cc  Statuses.h  Users.cc  Users.h  model.json
server/test/: CMakeLists.txt  test_main.cc
(+86 files in other folders)
